# distibuted_counter

./: .gitignore  README.md  makefile  package.json  pyproject.toml  serverless.dev.yml
config/: .env.dev  .env.prod  entrypoint.sh
docker/: Dockerfile  docker-compose.yaml
src/: consumers.py  models.py  producer.py
src/repository/: video_repo.py
src/utils/: config_utils.py  queue_utils.py
